--- a/styles.css
+++ b/styles.css
@@ -38,6 +38,7 @@ h2 {
   display: flex;
   justify-content: center;
   margin-bottom: 20px;
+
 }
 
 .show-button {
@@ -45,6 +46,7 @@ h2 {
   background-color: #5356a4;
   padding: 6px 10px;
   font-weight: bold;
+  border: 2px solid #50539e;
 }
 
 main {
@@ -61,15 +63,17 @@ form {
 .title {
   width: 375px;
   height: 45px;
+  border: 2px solid #6d70b1;
 }
 
 .body {
   width: 375px;
   height: 90px;
+  border: 2px solid #6d70b1;
 }
 
 label {
-
+  font-weight: bold;
   color: #1f1f3d;
   margin-top: 10px;
   margin-bottom: 5px;
@@ -82,24 +86,33 @@ label {
 }
 
 .save-button {
-  width: 381px;
+  width: 383px;
   height: 45px;
   margin: 25px;
+  background-color: #1f1f3d;
+  color: #e9e9f3;
+  font-size: 16px;
+  font-weight: bold;
+  border: 2px solid #6d70b1;
 }
 
 .search-field {
   display: flex;
   justify-content: center;
+  border: 2px solid #6d70b1;
 }
 
 .magnifying-glass {
   background-color: #1f1f3d;
-  width: 45px;
-  height: 45px;
+  width: 38px;
+  height: 38px;
+  padding: 5px;
 }
 
 .search-box {
-  width: 330px;
+  width: 320px;
   height: 45px;
   color: #1f1f3d;
+  font-size: 15;
+  padding-left: 5px;
 }
