--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 * {
   font-family: 'Open Sans', sans-serif;
-  border: 1px dotted lime;
+  /* border: 1px dotted lime; */
 }
 
 *,
@@ -22,21 +22,24 @@ nav {
   background-color: #1f1f3d;
   display: flex;
   flex-direction: column;
-  width: 25%;
-  height: 100vh;
+  width: 25.5%;
+  height: 1010px;
   /* justify-content: flex-start; */
 }
 
 h1 {
   color: #e9e9f3;
-  font-size: 16px;
+  font-size: 20px;
+  margin: 20px 0px;
   padding-left: 15px;
+
 }
 
 h2 {
   color: #bfbfdd;
-  font-size: 12px;
+  font-size: 16px;
   padding-left: 15px;
+  margin: 25px 0px 30px;
 }
 
 .filter-show {
@@ -47,38 +50,46 @@ h2 {
   display: flex;
   justify-content: center;
   margin-bottom: 20px;
-
 }
 
 .show-button {
-  color: #bfbfdd;
+  color: #e9e9f3;
   background-color: #5356a4;
   padding: 6px 10px;
   font-weight: bold;
   border: 2px solid #50539e;
+  height: 45px;
+  width: 240px;
+  margin-bottom: 10px;
+  font-size: 20px;
+  border-radius: 3px;
 }
 
 main {
   width: 75%;
   background-color: #a9aad2;
+  height: 1010px;
 }
 
 form {
   display: flex;
   flex-direction: column;
   align-items: center;
+  height: 400px;
 }
 
 .title {
   width: 375px;
   height: 45px;
   border: 2px solid #6d70b1;
+  border-radius: 3px;
 }
 
 .body {
   width: 375px;
   height: 90px;
   border: 2px solid #6d70b1;
+  border-radius: 3px;
 }
 
 label {
@@ -99,7 +110,7 @@ main {
 }
 
 .save-button {
-  width: 383px;
+  width: 375px;
   height: 45px;
   margin: 25px;
   background-color: #1f1f3d;
@@ -107,23 +118,26 @@ main {
   font-size: 16px;
   font-weight: bold;
   border: 2px solid #6d70b1;
+  border-radius: 3px;
 }
 
 .search-field {
   display: flex;
   justify-content: center;
   border: 2px solid #6d70b1;
+  border-radius: 3px;
 }
 
 .magnifying-glass {
   background-color: #1f1f3d;
-  width: 38px;
-  height: 38px;
+  height: 45px;
   padding: 5px;
+  border-top-left-radius: 3px;
+  border-bottom-left-radius: 3px;
 }
 
 .search-box {
-  width: 320px;
+  width: 330px;
   height: 45px;
   color: #1f1f3d;
   font-size: 15;
@@ -132,6 +146,11 @@ main {
 
 .idea-display {
   background-color: #eaeaf4;
+  height: 610px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 20px;
+  padding: 20px;
 }
 
 .idea-box {
@@ -140,6 +159,7 @@ main {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  border: 2px solid #1f1f3d;
 }
 
 header {
@@ -163,20 +183,32 @@ header {
 
 .idea-body {
   height: 100%;
+  background-color: #ffffff;
 }
 
 h3 {
+  margin: 20px 25px 20px 15px;
+  color: #1f1f3d;
 }
 
-p {
+.body-text {
+  margin: 0px 25px 0px 15px;
+  color: #1f1f3d;
+  overflow: auto;
 }
 
 footer {
   background-color: #5356a4;
   display: flex;
   height: 42px;
+  align-items: center;
 }
 
 .add-comment {
   width: 38px;
+}
+
+.comment {
+  color: #e9e9f3;
+  font-weight: bold;
 }
